--- a/resources/assets/stylesheets/sass/application.sass
+++ b/resources/assets/stylesheets/sass/application.sass
@@ -37,3 +37,6 @@
 @import "general/components/guestable-life-section"
 @import "general/components/header-with-list"
 @import "general/components/home-banner"
+@import "general/components/take-care"
+@import "general/components/our-client"
+@import "general/components/we-offffer"
