finished main page

--- a/resources/assets/stylesheets/sass/application.sass
+++ b/resources/assets/stylesheets/sass/application.sass
@@ -40,3 +40,5 @@
 @import "general/components/take-care"
 @import "general/components/our-client"
 @import "general/components/we-offffer"
+@import "general/components/slick-slider"
+@import "general/components/related_content"
