--- a/resources/assets/stylesheets/sass/blocks/header/index.scss
+++ b/resources/assets/stylesheets/sass/blocks/header/index.scss
@@ -255,6 +255,22 @@
   }
 }
 
+
 .cus-navigation ul li .dropdown-menu {
   min-width: 300px;
+}
+
+.cus-navigation.navbar-default .navbar-nav>li>a, .navbar-default .navbar-text{
+  color: #2a9cd7;
+  background-color: transparent;
+}
+
+
+.cus-navigation .dropdown-menu li a {
+  text-transform: uppercase;
+}
+
+.cus-navigation .dropdown-menu .current-menu-item > a {
+  background-color: #337ab7;
+  color: #ffffff;
 }
