added template for inner pages

--- a/resources/assets/stylesheets/sass/application.sass
+++ b/resources/assets/stylesheets/sass/application.sass
@@ -42,3 +42,4 @@
 @import "general/components/we-offffer"
 @import "general/components/slick-slider"
 @import "general/components/related_content"
+@import "general/components/inner-banner"
