made some pages, added css and js

--- a/resources/assets/stylesheets/sass/application.sass
+++ b/resources/assets/stylesheets/sass/application.sass
@@ -19,9 +19,10 @@
 
 //parsed styles
 @import "views/web/home"
+@import "views/web/about-us"
 
 
-//wp-components
+//custom components
 @import "general/components/accordion-responsive"
 @import "general/components/blog-detail-banner"
 @import "general/components/buttons"
@@ -43,3 +44,5 @@
 @import "general/components/slick-slider"
 @import "general/components/related_content"
 @import "general/components/inner-banner"
+@import "general/components/main-paragraph"
+
