a lot of changes and fixes

--- a/resources/assets/stylesheets/sass/application.sass
+++ b/resources/assets/stylesheets/sass/application.sass
@@ -16,10 +16,14 @@
 @import "blocks/index"
 
 
+//parsed helpers
+@import "general/components/utilites/div-alignment"
 
 //parsed styles
 @import "views/web/home"
 @import "views/web/about-us"
+@import "views/web/blog"
+@import "views/web/blog-detail"
 
 
 //custom components
