made ajax load posts by categiries. added popular posts

--- a/resources/assets/stylesheets/sass/application.sass
+++ b/resources/assets/stylesheets/sass/application.sass
@@ -49,4 +49,6 @@
 @import "general/components/related_content"
 @import "general/components/inner-banner"
 @import "general/components/main-paragraph"
+@import "general/components/tab-section"
+@import "general/components/previous-button"
 
