added new page and components

--- a/resources/assets/stylesheets/sass/application.sass
+++ b/resources/assets/stylesheets/sass/application.sass
@@ -24,6 +24,7 @@
 @import "views/web/about-us"
 @import "views/web/blog"
 @import "views/web/blog-detail"
+@import "views/web/full-service-manager"
 
 
 //custom components
@@ -51,4 +52,5 @@
 @import "general/components/main-paragraph"
 @import "general/components/tab-section"
 @import "general/components/previous-button"
+@import "general/components/interactive-slider"
 
